workspace = { members = ["browser-rust-core", "net/wasabi"] }
[package]
name = "browser-rust"
version = "0.1.0"
edition = "2021"
default-run = "browser-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "browser-rust"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
browser-rust-core = { path = "./browser-rust-core"}
net_wasabi = {path = "./net/wasabi", optional = true}
noli = { git = "https://github.com/hikalium/wasabi.git" , branch = "for_saba", optional = true}
